<resources>
    <string name="app_name">PHPTRAVELS</string>
    <string name="booking">BOOKING</string>
    <string name="hotesDescription">Perfect hotels for you</string>
    <string name="hotels">HOTELS</string>
    <string name="toursDescription">Live your life</string>
    <string name="Tours">TOURS</string>
    <string name="flightsDescription">Book flights on the go</string>
    <string name="filghts">FLIGHTS</string>
    <string name="blogDescription">Read articles about travel</string>
    <string name="blog">Blog</string>
    <string name="cars">CARS</string>
    <string name="carsDescription">Find your dream car</string>
    <string name="offersDescription">Amazing deals arounds you</string>
    <string name="offers">OFFERS</string>
    <string name="bookingDescription">Check Your Bookings</string>
    <string name="account_name">Account</string>
    <string name="login_register">Login/Register</string>
    <string name="home">Home</string>
    <string name="contact">Contact Us</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="lunch_discount">Lunch Discount</string>
    <string name="contacts">Contacts</string>
    <string name="langu">Languages:</string>
    <string name="hint_hotel">\tSEARCH FOR HOTEL OR LOCATION</string>
    <string name="hint_hotel_ex">"   SEARCH FOR LOCATION"</string>
    <string name="hint_tour"> SEARCH FOR TOUR OR LOCATION</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="child">"CHILD "</string>
    <string name="adult">"ADULT "</string>
    <string name="search">Search</string>
    <string name="checkIn_number">27</string>
    <string name="update">UPDATE</string>
    <string name="book">BOOK</string>
    <string name="book_now">BOOK NOW</string>
    <string name="description">Description</string>
    <string name="amenities">Amenities</string>
    <string name="payment_options">Payment Options</string>
    <string name="policy">Policy</string>
    <string name="map">MAP</string>
    <string name="overview">OVERVIEW</string>
    <string name="rooms">" ROOMS"</string>
    <string name="reviews">REVIEWS</string>
    <string name="related">RELATED</string>
    <string name="rating">Rating:</string>
    <string name="price">Price : </string>
    <string name="avg_night">AVG/Night</string>
    <string name="logout">Log Out</string>

    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="hotel_title">SEARCH HOTEL</string>
    <string name="to">TO</string>
    <string name="location_from">"  LOCATION FROM"</string>
    <string name="location_to">"  LOCATION TO"</string>
    <string name="tour_type">TOUR TYPE</string>
    <string name="loading">LOADING</string>
    <string name="select_car">SELECT THE CAR</string>
    <string name="pick_up">PICKUP LOCATION</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="dropoff_location">DROPOFF LOCATION</string>
    <string name="send">SEND</string>
    <string name="call">CALL</string>
    <string name="invoice_hint">INVOICE NUMBER</string>
    <string name="invc_code">INVOICE CODE</string>
    <string name="txt_coupon">Do You Have A Coupon Code?</string>
    <string name="etr_coupon_hint">Enter Your Coupon Number</string>
    <string name="apply">APPLY COUPON</string>
    <string name="conti">BOOK NOW</string>
    <string name="proceed">PROCEED</string>
    <string name="who">WHO?</string>
    <string name="no">NO.</string>
    <string name="about">About</string>
    <string name="tour_title">SEARCH FOR TOURS</string>
    <string name="tax_amp_vat"><![CDATA[Tax & Vat]]></string>
    <string name="deposite_now">Deposite Now</string>
    <string name="hotel_avail">Hotel Not Available In That Location</string>
    <string name="login">Login</string>
    <string name="guest">GUEST</string>
    <string name="coupon">COUPON</string>
    <string name="address">Address</string>
    <string name="room_not_available">ROOM NOT AVAILABLE</string>
    <string name="pickup">PICK-UP</string>
    <string name="dropoff">DROP-OFF</string>
    <string name="inclusion">INCLUSIONS</string>
    <string name="Exclusion">EXCLUSIONS</string>
    <string name="inflant">Infants</string>
    <string name="detail">DETAIL</string>
    <string name="my_booking">My Bookings</string>
    <string name="registration">Registration</string>
    <string name="setting">SETTINGS</string>
    <string name="city">CITY</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>
    <string name="card_number">Card Number</string>
    <string name="card_cw">Card CVV</string>
    <string name="sending">SENDING...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="retry">Retry</string>
    <string name="coupon_applied">Coupon Applied Successfully</string>
    <string name="my_account">My Account</string>
    <string name="profile">PROFILE</string>
    <string name="check_invoice">Check Invoice</string>
    <string name="empty_car">CARS NOT FOUND PLEASE CHANGE YOUR LOCARION</string>
    <string name="empty_tour">TOURS NOT FOUND PLEASE CHANGE YOUR LOCARION</string>
    <string name="empty_offers">OFFERS NOT FOUND PLEASE CHANGE YOUR LOCARION</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address_2">Address 2</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="error_api">Error In Api</string>
    <string name="or">----- OR -----</string>
    <string name="select_country">Select Country</string>
    <string name="next">NEXT STEP</string>
    <string name="spefiy_date">Please Specify Date</string>
    <string name="cvv_number">CVV Number Must be Greater from 3 number</string>
    <string name="room">Room</string>
    <string name="navigation_drawer_close"></string>
    <string name="navigation_drawer_open"></string>

</resources>
