<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl"
    android:layout_height="match_parent"
    android:fillViewport="true"

    android:layout_marginTop="40dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:inputType="text"
                android:textSize="15sp"
                android:hint="@string/first_name"
                />
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:inputType="text"
                android:textSize="15sp"
                android:hint="@string/last_name"
                />

            <!--  Email Label -->

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/email"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                />



            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/address"
                android:inputType="text"
                />


            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/phone_number"
                android:inputType="phone"
                />
            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15sp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/city"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/input_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/postal_code"
                android:inputType="number"
                android:textSize="15sp"
                />
            <EditText
                android:id="@+id/input_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/full_black"
                android:hint="@string/state"
                android:inputType="text"
                android:textSize="15sp"
                />
            <EditText
                android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp"
                android:text="@string/select_country"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:background="@drawable/ripple"
            android:text="@string/next"
            android:textColor="@color/white"
            />
    </RelativeLayout>

</ScrollView>
