<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Activities.HotelDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            tools:ignore="UselessParent">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true" />

            <com.phptravelsnative.utality.lib.Parallex.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="bottom"
                android:padding="15dip"
                app:centered="true"
                app:fillColor="@color/light_blue"
                app:pageColor="@color/light_black"
                app:strokeColor="@color/light_black"
                app:radius="4dp"
                app:snap="false" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:text="@string/lunch_discount"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/desc"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/shawdo_background"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:id="@+id/contact_title"
            android:text="@string/contacts"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_title"
            android:textSize="20sp"
            android:inputType="text"
            android:id="@+id/name_contacts"
            android:hint="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/name_contacts"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/email"
            android:id="@+id/message"
            android:inputType="text"
            android:hint="@string/message"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/message"
            android:id="@+id/send"
            android:textColor="@color/white"
            android:layout_marginBottom="2dp"
            android:background="@drawable/ripple"
            android:text="@string/send"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_below="@+id/send"
            android:id="@+id/call"
            android:textColor="@color/white"
            android:background="@drawable/ripple"
            android:text="@string/call"/>

    </RelativeLayout>
        </LinearLayout>
</ScrollView>
