<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:hint="@string/invoice_hint"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:id="@+id/invoice_number"
        />
    <View
        android:layout_width="298dp"
        android:layout_height= "0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_black" />
    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:hint="@string/invc_code"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/invoice_code"
        />
    <View
        android:layout_width="298dp"
        android:layout_height= "0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_black" />

    <Button
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:text="@string/search"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/ripple"
        android:id="@+id/search_hotels"
        />

</LinearLayout>
